Enhance ToolArguments in PlanHat class for improved query customization